<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/db" android:title="@string/dashboard" android:icon="@drawable/ic_dashboard_01"/>
    <item android:id="@+id/odList" android:title="@string/order_list" android:icon="@drawable/ic_list_alt_01" />
    <item android:id="@+id/category" android:title="@string/category" android:icon="@drawable/ic_view_module_01">
    <menu>
        <item android:id="@+id/addcat" android:title="@string/add_new" android:icon="@drawable/ic_baseline_add_24"/>
        <item android:id="@+id/listcat" android:title="@string/category_list" android:icon="@drawable/ic_baseline_format_list_bulleted_24"/>

    </menu>

    </item>
    <item android:id="@+id/help" android:title="@string/help" android:icon="@drawable/ic_live_help_01">
        <menu>
            <item android:id="@+id/addHelp" android:title="@string/add_new" android:icon="@drawable/ic_baseline_add_24"/>
            <item android:id="@+id/listHelp" android:title="@string/help_list" android:icon="@drawable/ic_baseline_format_list_bulleted_24"/>

        </menu>
    </item>
    <item android:id="@+id/settings" android:title="@string/settings" android:icon="@drawable/ic_settings_10"/>
    
</menu>