<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_manage_order"
        android:layout_gravity="left"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/Managord"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:text="@string/manage_oder"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:autofillHints=""
        android:ems="11"
        android:hint="Search..."
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="211dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="160dp"
        android:background="#EBFFC107"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ordermanagName"
            android:layout_width="335dp"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/nameOrde"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ordermanagOrdID"
            android:layout_width="335dp"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/order_id1"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ordermanagProdID"
            android:layout_width="335dp"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/product_id1"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ordermanagOrdDate"
            android:layout_width="335dp"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/order_date1"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ordermanagStatus"
            android:layout_width="335dp"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/status1"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="211dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="390dp"
        android:background="#EBFFC107"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ordermanagName2"
            android:layout_width="335dp"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/nameOrde"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ordermanagOrdID2"
            android:layout_width="335dp"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/order_id2"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ordermanagProdID2"
            android:layout_width="335dp"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/product_id2"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ordermanagOrdDate2"
            android:layout_width="335dp"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/order_date2"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ordermanagStatus2"
            android:layout_width="335dp"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/status2"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>

</FrameLayout>